[gd_scene load_steps=10 format=3 uid="uid://blfid41568rh7"]

[ext_resource type="Script" uid="uid://6w5hs783ap07" path="res://content/player/baloon.gd" id="1_7eq7y"]
[ext_resource type="Script" uid="uid://d25e5k1gph11s" path="res://content/camera_pivot.gd" id="2_eqhej"]
[ext_resource type="PackedScene" uid="uid://0r5x1oeoxato" path="res://content/items/cannon.tscn" id="3_523fv"]
[ext_resource type="PackedScene" uid="uid://c3i2860ycw52y" path="res://assets/envelope.glb" id="4_3i3f7"]
[ext_resource type="AudioStream" uid="uid://da6mgv682wx38" path="res://assets/sounds/cannon-shot-14799.mp3" id="5_wfhp3"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_fyksl"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_yqvsc"]
albedo_color = Color(0.25722882, 0.5978376, 0.4144482, 1)

[sub_resource type="CapsuleMesh" id="CapsuleMesh_w5e7a"]
material = SubResource("StandardMaterial3D_yqvsc")

[sub_resource type="SphereMesh" id="SphereMesh_7eq7y"]
radius = 10.0
height = 20.0

[node name="Baloon" type="CharacterBody3D"]
script = ExtResource("1_7eq7y")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_fyksl")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
mesh = SubResource("CapsuleMesh_w5e7a")

[node name="CameraPivot" type="Node3D" parent="."]
script = ExtResource("2_eqhej")

[node name="CameraIsometric" type="Camera3D" parent="CameraPivot"]
transform = Transform3D(1, 0, 0, 0, 0.8161376, 0.5778576, 0, -0.5778576, 0.8161376, -0.018569946, 4.008647, 2.1504755)

[node name="Cannon" parent="." instance=ExtResource("3_523fv")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.678, 0)

[node name="TemperatureLossTimer" type="Timer" parent="."]

[node name="MeshInstance3D2" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 12.574234, 0)
visible = false
mesh = SubResource("SphereMesh_7eq7y")

[node name="envelope" parent="." instance=ExtResource("4_3i3f7")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 15, 0)

[node name="CannonSound" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("5_wfhp3")
volume_db = -5.0

[connection signal="timeout" from="TemperatureLossTimer" to="." method="_on_temperature_loss_timer_timeout"]

[editable path="Cannon"]
